# sequential_batch_simulator

./: package-lock.json
omserver/: .pdm-python  README.md  pyproject.toml
omserver/omserver/: .gitignore  PARALLEL_PROCESSING_PLAN.txt  PARALLEL_SIMULATION_MANAGER.txt  README.md  SERVER_SOCKET_PORT_EXPLAINED.txt  SOCKET_VS_PORT_EXPLANATION.txt  pyproject.toml
omserver/omserver/src/: SEACHANGE_TEST_85MCR_batch  SEACHANGE_TEST_85MCR_batch.bat  SEA_CHANGE_TEST1.bat  start_server.bash
omserver/omserver/src/omserver/: EUEmissionCalculator.py  ExcelGenerator.py  ModelicaParamParser.py  ModelicaSequentialParaPaser.py  OMCConnection.py  __init__.py  model.py  seq_model.py  seq_paralle_model.py
omserver/omserver/src/omserver/lookup_tables/: __init__.py  biofuel_emission_factors.csv  fuel_lookup.py  fuel_properties.csv
omserver/omserver/tests/: ElectricVessel_SA3.mo  ElectricVessel_SA3_res.csv  conftest.py  test_model.py
seq_batch_simulatior/: index.html  package-lock.json  package.json
seq_batch_simulatior/public/assets/temp_db_assets/: FullDatabase.csv
seq_batch_simulatior/src/: App.jsx
seq_batch_simulatior/src/assets/duty_cycle/: 2023-15 Multibeam sidescan Trimmed_1.txt  2023-15 Multibeam sidescan Trimmed_Adjusted.txt
seq_batch_simulatior/src/assets/model_assets/: SEACHANGE_TEST_85MCR_batch.mo  SEA_CHANGE_TEST1.mo
seq_batch_simulatior/src/assets/temp_db_assets/: FullDatabaseUpdated.csv  simple_db_with_abb.csv  simple_db_with_bsfc.csv
seq_batch_simulatior/src/componets/funtion_utils/: DatabseLoaderUtils.jsx  DutyCycleLoaderUtils.jsx  ModelSelectorUtils.jsx  (+2 more)
(+5 files in other folders)
